<resources>
    <string name="app_name">Stock Check System</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favourite</string>
    <string name="db_ip">SQL Server IP Address</string>
    <string name="db_db">Database Name</string>
    <string name="db_user">Username</string>
    <string name="db_password">Password</string>
    <string name="db_header">Database Information</string>
</resources>
