<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/db_header">

        <EditTextPreference
            android:defaultValue="192.168.1.151"
            app:key="ip"
            app:title="@string/db_ip"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="stockchecks"
            app:key="db"
            app:title="@string/db_db"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="god3"
            app:key="user"
            app:title="@string/db_user"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="password"
            app:key="password"
            app:title="@string/db_password"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>



</PreferenceScreen>